--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "export:exsco-pdf": "md-to-pdf docs/exsco-change-request-form.md --dest docs/exsco-change-request-form.pdf && md-to-pdf docs/exsco-site-inventory.md --dest docs/exsco-site-inventory.pdf"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -81,6 +82,7 @@
     "globals": "^15.15.0",
     "jsdom": "^27.2.0",
     "lovable-tagger": "^1.1.11",
+    "md-to-pdf": "^5.2.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
